--- a/Goods.API/Goods.API.csproj
+++ b/Goods.API/Goods.API.csproj
@@ -8,15 +8,23 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.2" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Goods.Core\Goods.Core.csproj" />
-    <ProjectReference Include="..\Goods.DataBase\Goods.Services.csproj" />
-    <ProjectReference Include="..\Goods.Services\Goods.DataBase.csproj" />
+    <ProjectReference Include="..\Goods.DataBase\Goods.DataBase.csproj" />
+    <ProjectReference Include="..\Goods.Services\Goods.Services.csproj" />
   </ItemGroup>
 
 </Project>
