--- a/Goods.API/appsettings.Development.json
+++ b/Goods.API/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "GoodsServiceDbContext": "User ID=postgres;Password=admin;Host=localhost;Port=5432;Database=goodsServicedb"
   }
 }
