change repositories / add services

--- a/Goods.Services/Goods.Services.csproj
+++ b/Goods.Services/Goods.Services.csproj
@@ -19,4 +19,9 @@
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Goods.Core\Goods.Core.csproj" />
+    <ProjectReference Include="..\Goods.DataBase\Goods.DataBase.csproj" />
+  </ItemGroup>
+
 </Project>
