--- a/Goods.DataBase/Goods.DataBase.csproj
+++ b/Goods.DataBase/Goods.DataBase.csproj
@@ -19,4 +19,8 @@
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Goods.Core\Goods.Core.csproj" />
+  </ItemGroup>
+
 </Project>
